[gd_scene load_steps=20 format=3 uid="uid://kqhijch1lq55"]

[ext_resource type="Texture2D" uid="uid://b0235ynpsfeoc" path="res://DuckHunt/cenariofrente.png" id="1_e7ljg"]
[ext_resource type="Script" path="res://main.gd" id="1_jwdph"]
[ext_resource type="Texture2D" uid="uid://cy6mx6in1gw7o" path="res://DuckHunt/cenariotras.png" id="2_nkrb1"]
[ext_resource type="PackedScene" uid="uid://rce3kpqwkqb2" path="res://topo.tscn" id="5_8tyhd"]
[ext_resource type="PackedScene" uid="uid://h5lfgrwiom50" path="res://alvo.tscn" id="5_t6rd2"]
[ext_resource type="PackedScene" uid="uid://cqdbfsovl0cmg" path="res://chao.tscn" id="6_fo1ci"]
[ext_resource type="Texture2D" uid="uid://cm576i1tuadht" path="res://DuckHunt/cao/captura.png" id="7_0k7sl"]
[ext_resource type="Texture2D" uid="uid://b4vli1yl1ip4u" path="res://DuckHunt/cao/rindo.png" id="8_dqh7v"]
[ext_resource type="Texture2D" uid="uid://ch2uhycp2rv55" path="res://DuckHunt/hud.png" id="9_t4lmh"]
[ext_resource type="FontFile" uid="uid://bv517qxg4u177" path="res://DuckHunt/PressStart2P.ttf" id="10_gxxg2"]
[ext_resource type="AudioStream" uid="uid://tigiybghu4q0" path="res://DuckHunt/sons/cao_captura.wav" id="11_m4wyh"]
[ext_resource type="AudioStream" uid="uid://bboggyi3176ir" path="res://DuckHunt/sons/cao_rindo.wav" id="12_8u6vb"]
[ext_resource type="AudioStream" uid="uid://cub1y6fwhvy0d" path="res://DuckHunt/sons/colidiu.wav" id="13_j2l5f"]
[ext_resource type="AudioStream" uid="uid://ccf5nukygrohj" path="res://DuckHunt/sons/flyaway.wav" id="14_7bqtk"]
[ext_resource type="AudioStream" uid="uid://dyy0b2m5wpajt" path="res://DuckHunt/sons/round.wav" id="15_h5vd6"]

[sub_resource type="Animation" id="Animation_bqg7u"]
resource_name = "captura"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Captura:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.2, 1.53333, 3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(394, 551), Vector2(394, 443), Vector2(394, 443), Vector2(394, 559)]
}

[sub_resource type="Animation" id="Animation_6t4ns"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Captura:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(374, 551)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Rindo:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(394, 551)]
}

[sub_resource type="Animation" id="Animation_1dbwv"]
resource_name = "rindo"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Rindo:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.2, 1.6, 2.96667),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(394, 551), Vector2(394, 443), Vector2(394, 443), Vector2(394, 553)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_g2rxk"]
_data = {
"RESET": SubResource("Animation_6t4ns"),
"captura": SubResource("Animation_bqg7u"),
"rindo": SubResource("Animation_1dbwv")
}

[node name="Main" type="Node2D"]
script = ExtResource("1_jwdph")

[node name="Frente" type="Sprite2D" parent="."]
z_index = 1
texture = ExtResource("1_e7ljg")
centered = false

[node name="Fundo" type="Sprite2D" parent="."]
z_index = -3
texture = ExtResource("2_nkrb1")
centered = false

[node name="Alvo" parent="." instance=ExtResource("5_t6rd2")]
position = Vector2(376, 330)

[node name="GeraPato" type="Timer" parent="."]
one_shot = true

[node name="Espera" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="Topo" parent="." instance=ExtResource("5_8tyhd")]
position = Vector2(380, -139)

[node name="Chao" parent="." instance=ExtResource("6_fo1ci")]
position = Vector2(386, 843)

[node name="Captura" type="Sprite2D" parent="."]
position = Vector2(374, 551)
texture = ExtResource("7_0k7sl")

[node name="Rindo" type="Sprite2D" parent="."]
position = Vector2(394, 551)
texture = ExtResource("8_dqh7v")

[node name="Cao" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_g2rxk")
}

[node name="HUD" type="CanvasLayer" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="HUD"]
position = Vector2(382, 678)
texture = ExtResource("9_t4lmh")

[node name="Label" type="Label" parent="HUD"]
offset_left = 347.0
offset_top = 654.0
offset_right = 418.0
offset_bottom = 702.0
theme_override_fonts/font = ExtResource("10_gxxg2")
theme_override_font_sizes/font_size = 20
text = "000"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CaoCaptura" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("11_m4wyh")

[node name="CaoRindo" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("12_8u6vb")

[node name="Colidiu" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("13_j2l5f")

[node name="Voou" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("14_7bqtk")

[node name="NovoTurno" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("15_h5vd6")

[connection signal="timeout" from="GeraPato" to="." method="_on_gera_pato_timeout"]
[connection signal="timeout" from="Espera" to="." method="_on_espera_timeout"]
[connection signal="body_entered" from="Topo" to="." method="_on_topo_body_entered"]
[connection signal="body_entered" from="Chao" to="." method="_on_chao_body_entered"]
